* Created generic versions of DynamicMethod and IBoundExpression to have a typed Invoke method;
* Made BoundExpression internal and replaced with an interface, because the BoundExpression<T> does not inherit from BoundExpression (because BoundExpression is cached and BoundExpression<T> is just a wrapper).

--- a/Expressions/Expressions.csproj
+++ b/Expressions/Expressions.csproj
@@ -55,6 +55,7 @@
     <Compile Include="CachedDynamicExpression.cs" />
     <Compile Include="CastType.cs" />
     <Compile Include="CompilerUtil.cs" />
+    <Compile Include="IBoundExpression.cs" />
     <Compile Include="VisualBasic\VisualBasicLexer.cs" />
     <Compile Include="VisualBasic\VisualBasicParser.cs" />
     <Compile Include="VisualBasic\Generated\VisualBasicLexer.cs" />
