--- a/Expressions.Test/Expressions.Test.csproj
+++ b/Expressions.Test/Expressions.Test.csproj
@@ -77,6 +77,7 @@
     <Compile Include="VisualBasicLanguage\ExpressionTests\Indexing.cs" />
     <Compile Include="VisualBasicLanguage\ExpressionTests\MethodCalls.cs" />
     <Compile Include="VisualBasicLanguage\ExpressionTests\SpecialConstructs.cs" />
+    <Compile Include="VisualBasicLanguage\ExpressionTests\StringExpressions.cs" />
     <Compile Include="VisualBasicLanguage\ExpressionTests\TestBase.cs" />
     <Compile Include="VisualBasicLanguage\ExpressionTests\UnaryExpressions.cs" />
     <Compile Include="VisualBasicLanguage\ExpressionTests\VoidMethods.cs" />
