--- a/Expressions.Test/Expressions.Test.csproj
+++ b/Expressions.Test/Expressions.Test.csproj
@@ -57,6 +57,7 @@
     <Compile Include="FleeLanguage\Compilation\CompilationFailures.cs" />
     <Compile Include="FleeLanguage\Compilation\ExpectedExceptions.cs" />
     <Compile Include="FleeLanguage\IndividualTests.cs" />
+    <Compile Include="TestOperatorOverload.cs" />
     <Compile Include="VisualBasicLanguage\BulkTests\BulkTests.cs" />
     <Compile Include="VisualBasicLanguage\Compilation\BinaryExpressions.cs" />
     <Compile Include="VisualBasicLanguage\Compilation\Caching.cs" />
@@ -217,6 +218,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="VisualBasicLanguage\BulkTests\TestScripts\ValidExpressions.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
