--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ Thumbs.db
 /*.dotCover
 /Everything.sln
 /_ReSharper.*
+Expressions/Csharp/Generated/CsharpParser.cs
+Expressions/Csharp/Generated/CsharpLexer.cs
