--- a/Expressions.Test/Expressions.Test.csproj
+++ b/Expressions.Test/Expressions.Test.csproj
@@ -57,6 +57,7 @@
     <Compile Include="FleeLanguage\Compilation\CompilationFailures.cs" />
     <Compile Include="FleeLanguage\Compilation\ExpectedExceptions.cs" />
     <Compile Include="FleeLanguage\IndividualTests.cs" />
+    <Compile Include="MyTests.cs" />
     <Compile Include="VisualBasicLanguage\BulkTests\BulkTests.cs" />
     <Compile Include="VisualBasicLanguage\Compilation\BinaryExpressions.cs" />
     <Compile Include="VisualBasicLanguage\Compilation\Caching.cs" />
