--- a/Expressions/Expressions.csproj
+++ b/Expressions/Expressions.csproj
@@ -58,6 +58,8 @@
     <Compile Include="ExpressionsException.cs" />
     <Compile Include="ExpressionsExceptionType.cs" />
     <Compile Include="IBoundExpression.cs" />
+    <Compile Include="ResolveVariableTypeEventHandler.cs" />
+    <Compile Include="ResolveVariableValueEventHandler.cs" />
     <Compile Include="VisualBasic\VisualBasicLexer.cs" />
     <Compile Include="VisualBasic\VisualBasicParser.cs" />
     <Compile Include="VisualBasic\Generated\VisualBasicLexer.cs" />
